[package]
name = "spose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.17"
colored = "2.0.0"
serde_yaml = "0.8.24"
serde_json = "1.0.81"
anyhow = "1.0.57"
once_cell = "1.10.0"
arboard = "2.1.0"
notify-rust = "4.5.8"

[dependencies.rdev]
version = "0.5.1"
features = ["unstable_grab"]

[dependencies.tokio]
version = "1.18.2"
features = ['sync', 'macros', 'rt-multi-thread', 'full']

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.oxide]
git = 'https://github.com/wess/oxide.git'
branch = 'master'

[dependencies.appwrite]
git = 'https://github.com/PineappleIOnic/sdk-for-rust'
branch = 'main'
